<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/detailsScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:orientation="vertical"
        android:useDefaultMargins="true" >

        <TextView
            android:id="@+id/nameLabelTextView"
            android:layout_column="0"
            android:layout_row="1"
            android:text="@string/label_name"
            style="@style/ContactLabelTextView" />

        <TextView
            android:id="@+id/nameTextView"
            android:layout_column="1"
            android:layout_row="1"
            style="@style/ContactTextView" />

        <TextView
            android:id="@+id/itemTypeLabelTextView"
            android:layout_column="0"
            android:layout_row="2"
            android:text="@string/label_type"
            style="@style/ContactLabelTextView" />

        <TextView
            android:id="@+id/itemTypeTextView"
            android:layout_column="1"
            android:layout_row="2"
            style="@style/ContactTextView" />

        <TextView
            android:id="@+id/itemMainTypeTextView"
            android:layout_column="1"
            android:layout_row="3"
            style="@style/ContactTextView" />

        <TextView
            android:id="@+id/itemPriceLabelTextView"
            android:layout_column="0"
            android:layout_row="4"
            android:text="@string/label_price"
            style="@style/ContactLabelTextView" />

        <TextView
            android:id="@+id/itemMainTypeLabelTextView"
            android:layout_column="0"
            android:layout_row="3"
            android:text="@string/label_type_main"
            style="@style/ContactLabelTextView" />

        <TextView
            android:id="@+id/itemPriceTextView"
            android:layout_column="1"
            android:layout_row="4"
            style="@style/ContactTextView" />

        <TextView
            android:id="@+id/itemQtyLabelTextView"
            android:layout_column="0"
            android:layout_row="5"
            android:text="@string/label_quantity"
            style="@style/ContactLabelTextView" />

        <TextView
            android:id="@+id/itemQtyTextView"
            android:layout_column="1"
            android:layout_row="5"
            style="@style/ContactTextView" />

        <TextView
            android:id="@+id/itemUrlLabelTextView"
            android:layout_column="0"
            android:layout_row="6"
            android:text="@string/label_buy_url"
            style="@style/ContactLabelTextView" />

        <TextView
            android:id="@+id/itemUrlTextView"
            android:layout_column="1"
            android:layout_row="6"
            style="@style/ContactTextView" />
    </GridLayout>

</ScrollView>
